--- a/localization/kor/AigisMod-Card-Strings.json
+++ b/localization/kor/AigisMod-Card-Strings.json
@@ -1,30 +1,30 @@
 {
   "aigisMod:SanaraPlatinum": {
     "NAME": "사나라",
-    "DESCRIPTION": "Gain 1 Strength and Dexterity. NL Gain !M! Temporary HP at the end of your turn.",
+    "DESCRIPTION": "힘 1 과 민첩 1 을 얻습니다. NL 턴 종료시 aigismod:임시체력 !M! 을 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
-      "She Who Molds the Earth"
+      "대지를 잇는 자"
     ]
   },
   "aigisMod:SanaraBlack": {
     "NAME": "사나라",
-    "DESCRIPTION": "Gain 2 Strength and Dexterity. NL Gain !M! Temporary HP at the end of your turn.",
+    "DESCRIPTION": "힘 2 와 민첩 2 를 얻습니다. NL 턴 종료시 aigismod:임시체력 !M! 을 얻습니다.",
     "EXTENDED_DESCRIPTION" : [
-      "She Who Molds the Earth"
+      "대지를 잇는 자"
     ]
   },
   "aigisMod:SolaisPlatinum": {
     "NAME": "솔라스",
-    "DESCRIPTION": "Innate. NL Deal !D! damage twice to all enemies. NL aigismod:Skill_charge: Increase this card damage by !M! this combat.",
+    "DESCRIPTION": "선천성. NL 모든 적에게 !D! 데미지를 2회 가합니다. NL aigismod:스킬챠지: 이 카드의 데미지를 이번 전투에서 !M! 높입니다.",
     "EXTENDED_DESCRIPTION" : [
-      "She Who Sings of Stars"
+      "별을 읽는 자"
     ]
   },
   "aigisMod:SolaisBlack": {
     "NAME": "솔라스",
-    "DESCRIPTION": "Innate. NL Deal !D! damage twice to all enemies. NL aigismod:Skill_charge: Increase this card damage by !M! this combat.",
+    "DESCRIPTION": "선천성. NL 모든 적에게 !D! 데미지를 2회 가합니다. NL aigismod:스킬챠지: 이 카드의 데미지를 이번 전투에서 !M! 높입니다.",
     "EXTENDED_DESCRIPTION" : [
-      "She Who Sings of Stars"
+      "별을 읽는 자"
     ]
   },
   "aigisMod:ArgePlatinum": {
