--- a/localization/kor/AigisMod-Character-Strings.json
+++ b/localization/kor/AigisMod-Character-Strings.json
@@ -1,46 +1,46 @@
 {
   "aigisMod:ThePrinceCharacter": {
     "NAMES": [
-      "The Prince",
-      "the Prince"
+      "왕자",
+      "왕자"
     ],
     "TEXT": [
-      "While training in the Tower of Heroes a strange phenomenon appeared. NL The prince and his companions now explore a place identified as the Spire.",
-      "You order your units to attack the heart.",
-      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~your~ ~highness,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+      "영걸의 탑에서 수련하던 중, 기묘한 일이 벌어졌다. NL 왕자와 그의 동료들은 지금, 첨탑이라 불리는 장소를 탐색하고 있다.",
+      "당신은 동료들에게 심장을 공격하라 명하고...",
+      "불빛이 사라진 거리를 걷던 중, 당신은 어둠의 의식을 행하는 다수의 두건 쓴 사람들을 목격한다. 당신이 접근하자, 그들은 일제히 당신을 돌아보았다. 무리 중 가장 장신인 이가 송곳니를 드러내며, 길고 창백한 손을 당신에게 뻗는다. NL "왕자여, 우리와 함께하여 첨탑의 온기를 느껴봅시다." "
     ]
   },
   "aigisMod:TheEmperorCharacter": {
     "NAMES": [
-      "The Emperor",
-      "the Emperor"
+      "황제",
+      "황제"
     ],
     "TEXT": [
-      "The White Emperor leads an expedition to investigate NL the mysterious powers hidden in the Spire.",
-      "You attack the heart along your comrades.",
-      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~warrior,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+      "백의 황제는 첨탑에 숨겨진 신비한 힘을 탐색하기 위해 NL 출정에 나섰다.",
+      "당신은 동료들과 함께 심장을 공격하고...",
+      "불빛이 사라진 거리를 걷던 중, 당신은 어둠의 의식을 행하는 다수의 두건 쓴 사람들을 목격한다. 당신이 접근하자, 그들은 일제히 당신을 돌아보았다. 무리 중 가장 장신인 이가 송곳니를 드러내며, 길고 창백한 손을 당신에게 뻗는다. NL "전사여, 우리와 함께하여 첨탑의 온기를 느껴봅시다." "
     ]
   },
   "aigisMod:TheAvengerCharacter": {
     "NAMES": [
-      "The Avenger",
-      "the Avenger"
+      "복수자",
+      "복수자"
     ],
     "TEXT": [
-      "Vincent travels the world in order to make amends to his family and not being able to save them. NL Now he will explore the Spire, but he is not alone.",
-      "You prepare your Final Trump Card against the heart.",
-      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~hunter,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+      "빈센트는 가족을 지키지 못한 것에 대한 속죄의 여행을 하고 있다. NL 이제 첨탑을 등반하게 되었고, 그는 더 이상 혼자가 아니다.",
+      "당신은 심장을 향한 비장의 카드를 준비하고...",
+      "불빛이 사라진 거리를 걷던 중, 당신은 어둠의 의식을 행하는 다수의 두건 쓴 사람들을 목격한다. 당신이 접근하자, 그들은 일제히 당신을 돌아보았다. 무리 중 가장 장신인 이가 송곳니를 드러내며, 길고 창백한 손을 당신에게 뻗는다. NL "사냥꾼이여, 우리와 함께하여 첨탑의 온기를 느껴봅시다." "
     ]
   },
   "aigisMod:TheDarkKnightCharacter": {
     "NAMES": [
-      "The Dark Knight",
-      "the Dark Knight"
+      "암흑기사",
+      "암흑기사"
     ],
     "TEXT": [
-      "A warrior who became a living armor is guided by the voice of the stars. NL Through the Spire, he might make an important discovery.",
-      "You are about to use the special technique against the heart.",
-      "Navigating an unlit street, you come across several hooded figures in the midst of some dark ritual. As you approach, they turn to you in eerie unison. The tallest among them bares fanged teeth and extends a long, pale hand towards you. NL ~\"Join~ ~us~ ~knight,~ ~and~ ~feel~ ~the~ ~warmth~ ~of~ ~the~ ~Spire.\"~"
+      "리빙아머가 된 전사는 별의 속삭임에 인도되어 첨탑에 도달했다. NL 이 여정을 통해 그는 중요한 깨달음을 얻을 수도 있을 것이다.",
+      "당신은 심장을 향한 오의를 발하고...",
+      "불빛이 사라진 거리를 걷던 중, 당신은 어둠의 의식을 행하는 다수의 두건 쓴 사람들을 목격한다. 당신이 접근하자, 그들은 일제히 당신을 돌아보았다. 무리 중 가장 장신인 이가 송곳니를 드러내며, 길고 창백한 손을 당신에게 뻗는다. NL "기사여, 우리와 함께하여 첨탑의 온기를 느껴봅시다." "
     ]
   }
 }
