--- a/localization/kor/AigisMod-Character-Strings.json
+++ b/localization/kor/AigisMod-Character-Strings.json
@@ -16,7 +16,7 @@
       "황제"
     ],
     "TEXT": [
-      "백의 황제는 첨탑에 숨겨진 신비한 힘을 탐색하기 위해 출정에 나섰다.",
+      "백의 황제는 첨탑에 숨겨진 신비한 힘을 탐색하기 위해 NL 출정에 나섰다.",
       "당신은 동료들과 함께 심장을 공격하고...",
       "불빛이 사라진 거리를 걷던 중, 당신은 어둠의 의식을 행하는 다수의 두건 쓴 사람들을 목격한다. 당신이 접근하자, 그들은 일제히 당신을 돌아보았다. 무리 중 가장 장신인 이가 송곳니를 드러내며, 길고 창백한 손을 당신에게 뻗는다. NL "전사여, 우리와 함께하여 첨탑의 온기를 느껴봅시다." "
     ]
