--- a/localization/kor/AigisMod-Keyword-Strings.json
+++ b/localization/kor/AigisMod-Keyword-Strings.json
@@ -19,13 +19,15 @@
     "DESCRIPTION": "Applies an effect #yonce #yper #yturn when playing an #yImperial card while this is in hand."
   },
   {
-    "PROPER_NAME": "Damage Aura",
+    "PROPER_NAME": "데미지 아우라",
     "NAMES": [
+      "데미지아우라",
+      "데미지 아우라",
       "Damage Aura",
       "Damage_aura",
       "damage_aura"
     ],
-    "DESCRIPTION": "On turn end, deal #ydamage equal to amount to all enemies."
+    "DESCRIPTION": "턴 종료시, 모든 적에게 #y데미지를 가합니다."
   },
   {
     "PROPER_NAME": "관통데미지",
@@ -38,13 +40,14 @@
     "DESCRIPTION": "이 카드의 공격은 #y방어도와 #y가시, #y분노, #y날카로운 #y껍질, 그리고 #y몸 #y말기를 #b무시합니다."
   },
   {
-    "PROPER_NAME": "Bloom Petal",
+    "PROPER_NAME": "블룸페탈",
     "NAMES": [
+      "블룸페탈",
       "Bloom Petal",
       "Bloom_petal",
       "bloom_petal"
     ],
-    "DESCRIPTION": "On your second turn after getting this power: all enemies receive damage (equal to this amount), #b2 #yWeak and #b2 #yVulnerable, then this power is removed."
+    "DESCRIPTION": "이 파워를 얻고 2 턴 뒤에 모든 적에게 데미지와 #b2 #y약화와 #b2 #y취약을 부여합니다. 그 후 이 파워는 사라집니다."
   },
   {
     "PROPER_NAME": "Cursed Rite",
@@ -118,11 +121,13 @@
   },
 
   {
+    "PROPER_NAME": "암살",
     "NAMES": [
+      "암살",
       "Assassination",
       "assassination"
     ],
-    "DESCRIPTION": "If it #ydefeats an enemy, return this to #yhand and this card cost becomes #b0 for the turn."
+    "DESCRIPTION": "만약 적에게 #y치명타를 가한 경우, 이 카드의 코스트가 #b0 이 된 상태로 #y손패에 돌아옵니다."
   },
   {
     "NAMES": [
@@ -166,18 +171,22 @@
     "DESCRIPTION": "Add #b1 card with the indicated name from #yDraw #yPile to #yhand."
   },
   {
+    "PROPER_NAME": "아쳐",
     "NAMES": [
+      "아쳐",
       "Archer",
       "archer"
     ],
-    "DESCRIPTION": "This card #bignores #yThorns, #yAngry, #ySharp #yHides and #yCurl #yUp."
+    "DESCRIPTION": "이 카드는 #y가시, #y분노, #y날카로운 #y껍질과 #y몸 #y말기를 #b무시합니다."
   },
   {
+    "PROPER_NAME": "인술",
     "NAMES": [
+      "인술",
       "Ninjutsu",
       "ninjutsu"
     ],
-    "DESCRIPTION": "Add #b1 #yShuriken at turn start. Each additional #yNinjutsu you play increases the amount of hits the #yShuriken does by #b1."
+    "DESCRIPTION": "턴 시작시 #b1 개의 #y수리검을 획득합니다. #y인술이 추가적으로 상승될 때마다 #y수리검의 타격 횟수가 #b1 씩 증가합니다."
   },
   {
     "NAMES": [
@@ -188,13 +197,15 @@
   },
 
   {
+    "PROPER_NAME": "언데드",
     "NAMES": [
+      "언데드",
       "Undead",
       "undead",
       "Undead:",
       "undead:"
     ],
-    "DESCRIPTION": "Trigger this effect when #yExhausted."
+    "DESCRIPTION": "이 카드가 #y소멸 되었을 때, 이 효과가 발동됩니다."
   },
   {
     "NAMES": [
@@ -204,13 +215,15 @@
     "DESCRIPTION": "Attacked enemy gains #yVampire #yBite equal to #yunblocked damage. When #yVampire #yBite reaches #b60, stun that enemy and that enemy receives #b1 #yStun #yResistance."
   },
   {
+    "PROPER_NAME": "주술",
     "NAMES": [
+      "주술",
       "Cursed",
       "cursed",
       "Cursed:",
       "cursed:"
     ],
-    "DESCRIPTION": "For each #bcurse #bcard in your #yMaster #yDeck, apply the following effect when playing this card."
+    "DESCRIPTION": "#y카드 #y더미에 있는 #b저주 #b카드의 수만큼, 이 효과가 발동됩니다."
   },
   {
     "NAMES": [
@@ -222,14 +235,15 @@
     "DESCRIPTION": "At the end of your turn, if the enemy #yintends to #yattack, that enemy #ytakes #ydamage. Burn is reduced at the start of the turn"
   },
   {
-    "PROPER_NAME": "Magical Ignition",
+    "PROPER_NAME": "마도생명체",
     "NAMES": [
+      "마도생명체",
       "Magical Ignition",
       "Magical_ignition.",
       "Magical_ignition",
       "magical_ignition"
     ],
-    "DESCRIPTION": "At the start of the combat, add #yShield #yof #yRawal and #ySpear #yof #yRawal to the Draw Pile. These have the same amount of upgrades as this card."
+    "DESCRIPTION": "전투 시작시, #y라왈의 #y방패와 #y라왈의 #y창을 뽑을 카드 더미에 추가합니다. 해당 카드들은 이 카드의 강화 횟수를 공유합니다."
   },
   {
     "NAMES": [
@@ -278,13 +292,16 @@
     "DESCRIPTION": "#yUnplayable unless your Block is equal or higher than this amount."
   },
   {
+    "PROPER_NAME": "봉인 해제",
     "NAMES": [
+      "봉인해제",
+      "봉인 해제",
       "Release",
       "Release:",
       "release",
       "release:"
     ],
-    "DESCRIPTION": "Gain this effect when your block is 0 or while you have Blur."
+    "DESCRIPTION": "방어가 0 인 경우나, 흐릿함 상태인 경우 이 효과를 발동합니다."
   },
 
   {
@@ -320,8 +337,7 @@
   {
     "PROPER_NAME": "임시체력",
     "NAMES": [
-      "임시체력",
-      "임시",
+      "임시체력"
     ],
     "DESCRIPTION": "전투 종료시 임시체력은 소멸됩니다."
   },
